--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.22", features = ["derive"] }
+dirs = "4.0.0"
+git2 = "0.15.0"
 rlua = "0.19.4"
 serde = { version = "1.0.144", features = ["derive"] }
+toml = "0.5.9"
