--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "project_init"
+name = "ppi"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.2.22", features = ["derive"] }
+clap = { version = "3.2.22", features = ["derive", "cargo"] }
 dirs = "4.0.0"
 git2 = "0.15.0"
 rlua = "0.19.4"
